--- a/Layout.html
+++ b/Layout.html
@@ -21,7 +21,7 @@
   </head>
   <body>
      <!--Header-->
-    <div class="cover" style="background-image: url(https://github.com/faridsurya/Vue-Axios-Basic/blob/master/images/thom-milkovic-qGQIOLke2kE-unsplash.jpg?raw=true);">
+    <div class="cover" style="background-image: url(Background.jpeg);">
       <div class="masking"></div>
       <div class="container h-100">
         <div class="row h-100 align-items-center">
@@ -35,7 +35,7 @@
             </div>
           </div>
           <div class="col-6 align-self-end text-center">
-            <img src="F1" width="300px">
+            <img src="F1.png" width="200px">
           </div>
         </div>
       </div>   
@@ -47,10 +47,10 @@
         
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80" alt="Card image cap">
+            <img class="card-img-top" src="Digital-Marketing.jpg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Digital Marketing</h5>
+              <p class="card-text">Saya mempunyai skill untuk bekerja di bagian Digital Marketing</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
@@ -58,10 +58,10 @@
         
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80" alt="Card image cap">
+            <img class="card-img-top" src="Gamers.jpg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Gamers</h5>
+              <p class="card-text">Saya pemain profesional di bidang E-sport DOTA</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
@@ -69,10 +69,10 @@
 
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80" alt="Card image cap">
+            <img class="card-img-top" src="Basketball.jpeg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">BaketBall</h5>
+              <p class="card-text">Saya pernah menjadi atlet BasketBall di kota kelahiran.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
